v19.1/modules/GC.Spread.Sheets.DataCharts.md
# Namespace: DataCharts

[Spread](GC.Spread.md).[Sheets](GC.Spread.Sheets.md).DataCharts

## Table of contents

### Enumerations

- [Aggregate](../enums/GC.Spread.Sheets.DataCharts.Aggregate.md)
- [AnimationEasing](../enums/GC.Spread.Sheets.DataCharts.AnimationEasing.md)
- [AxisPosition](../enums/GC.Spread.Sheets.DataCharts.AxisPosition.md)
- [AxisType](../enums/GC.Spread.Sheets.DataCharts.AxisType.md)
- [ComparisonOperator](../enums/GC.Spread.Sheets.DataCharts.ComparisonOperator.md)
- [DataChartType](../enums/GC.Spread.Sheets.DataCharts.DataChartType.md)
- [DateMode](../enums/GC.Spread.Sheets.DataCharts.DateMode.md)
- [FontStyle](../enums/GC.Spread.Sheets.DataCharts.FontStyle.md)
- [FormatType](../enums/GC.Spread.Sheets.DataCharts.FormatType.md)
- [FunnelType](../enums/GC.Spread.Sheets.DataCharts.FunnelType.md)
- [HAlign](../enums/GC.Spread.Sheets.DataCharts.HAlign.md)
- [LegendPosition](../enums/GC.Spread.Sheets.DataCharts.LegendPosition.md)
- [LegendType](../enums/GC.Spread.Sheets.DataCharts.LegendType.md)
- [LineAspect](../enums/GC.Spread.Sheets.DataCharts.LineAspect.md)
- [LogicalOperation](../enums/GC.Spread.Sheets.DataCharts.LogicalOperation.md)
- [OrderType](../enums/GC.Spread.Sheets.DataCharts.OrderType.md)
- [Orientation](../enums/GC.Spread.Sheets.DataCharts.Orientation.md)
- [OverlappingLabels](../enums/GC.Spread.Sheets.DataCharts.OverlappingLabels.md)
- [StringOperator](../enums/GC.Spread.Sheets.DataCharts.StringOperator.md)
- [SymbolShape](../enums/GC.Spread.Sheets.DataCharts.SymbolShape.md)
- [TextOverflow](../enums/GC.Spread.Sheets.DataCharts.TextOverflow.md)
- [TextPosition](../enums/GC.Spread.Sheets.DataCharts.TextPosition.md)
- [TickMark](../enums/GC.Spread.Sheets.DataCharts.TickMark.md)
- [VAlign](../enums/GC.Spread.Sheets.DataCharts.VAlign.md)
- [ValueOptionType](../enums/GC.Spread.Sheets.DataCharts.ValueOptionType.md)
- [ValueScaleType](../enums/GC.Spread.Sheets.DataCharts.ValueScaleType.md)

### Classes

- [DataChart](../classes/GC.Spread.Sheets.DataCharts.DataChart.md)
- [DataChartConfigPanel](../classes/GC.Spread.Sheets.DataCharts.DataChartConfigPanel.md)
- [DataChartManager](../classes/GC.Spread.Sheets.DataCharts.DataChartManager.md)

### Interfaces

- [IAnimationOption](../interfaces/GC.Spread.Sheets.DataCharts.IAnimationOption.md)
- [IAxisOption](../interfaces/GC.Spread.Sheets.DataCharts.IAxisOption.md)
- [IAxisUnitOption](../interfaces/GC.Spread.Sheets.DataCharts.IAxisUnitOption.md)
- [IBarStyleOption](../interfaces/GC.Spread.Sheets.DataCharts.IBarStyleOption.md)
- [IBorderRadius](../interfaces/GC.Spread.Sheets.DataCharts.IBorderRadius.md)
- [ICategoryEncodingOption](../interfaces/GC.Spread.Sheets.DataCharts.ICategoryEncodingOption.md)
- [IConfigLegendOption](../interfaces/GC.Spread.Sheets.DataCharts.IConfigLegendOption.md)
- [IConfigOption](../interfaces/GC.Spread.Sheets.DataCharts.IConfigOption.md)
- [IConnectingLineStyle](../interfaces/GC.Spread.Sheets.DataCharts.IConnectingLineStyle.md)
- [IContentEncodingOption](../interfaces/GC.Spread.Sheets.DataCharts.IContentEncodingOption.md)
- [ICssColorOptions](../interfaces/GC.Spread.Sheets.DataCharts.ICssColorOptions.md)
- [IDataChartConfig](../interfaces/GC.Spread.Sheets.DataCharts.IDataChartConfig.md)
- [IDataPointStyleOption](../interfaces/GC.Spread.Sheets.DataCharts.IDataPointStyleOption.md)
- [IFieldBasicOption](../interfaces/GC.Spread.Sheets.DataCharts.IFieldBasicOption.md)
- [IFormatOption](../interfaces/GC.Spread.Sheets.DataCharts.IFormatOption.md)
- [IFunnelOption](../interfaces/GC.Spread.Sheets.DataCharts.IFunnelOption.md)
- [IHeaderOption](../interfaces/GC.Spread.Sheets.DataCharts.IHeaderOption.md)
- [ILabelStyleOption](../interfaces/GC.Spread.Sheets.DataCharts.ILabelStyleOption.md)
- [ILegendOptions](../interfaces/GC.Spread.Sheets.DataCharts.ILegendOptions.md)
- [ILineStyle](../interfaces/GC.Spread.Sheets.DataCharts.ILineStyle.md)
- [IPaddingOption](../interfaces/GC.Spread.Sheets.DataCharts.IPaddingOption.md)
- [IPaletteItemOption](../interfaces/GC.Spread.Sheets.DataCharts.IPaletteItemOption.md)
- [IPlotAreaLayoutOption](../interfaces/GC.Spread.Sheets.DataCharts.IPlotAreaLayoutOption.md)
- [IPlotAreaOption](../interfaces/GC.Spread.Sheets.DataCharts.IPlotAreaOption.md)
- [IPlotConfigOption](../interfaces/GC.Spread.Sheets.DataCharts.IPlotConfigOption.md)
- [IPlotConfigTextOption](../interfaces/GC.Spread.Sheets.DataCharts.IPlotConfigTextOption.md)
- [IPlotConfigTooltipOption](../interfaces/GC.Spread.Sheets.DataCharts.IPlotConfigTooltipOption.md)
- [IPlotEncodingsOption](../interfaces/GC.Spread.Sheets.DataCharts.IPlotEncodingsOption.md)
- [IPlotOption](../interfaces/GC.Spread.Sheets.DataCharts.IPlotOption.md)
- [IQuadrangleStyleOption](../interfaces/GC.Spread.Sheets.DataCharts.IQuadrangleStyleOption.md)
- [IRangeValueEncodingOption](../interfaces/GC.Spread.Sheets.DataCharts.IRangeValueEncodingOption.md)
- [IRangeVectorsOption](../interfaces/GC.Spread.Sheets.DataCharts.IRangeVectorsOption.md)
- [ISortEncodingOption](../interfaces/GC.Spread.Sheets.DataCharts.ISortEncodingOption.md)
- [IStockValueEncodingOption](../interfaces/GC.Spread.Sheets.DataCharts.IStockValueEncodingOption.md)
- [IStockVectorsOption](../interfaces/GC.Spread.Sheets.DataCharts.IStockVectorsOption.md)
- [IStyleOption](../interfaces/GC.Spread.Sheets.DataCharts.IStyleOption.md)
- [ISymbolStyleOption](../interfaces/GC.Spread.Sheets.DataCharts.ISymbolStyleOption.md)
- [ITextDecorationOption](../interfaces/GC.Spread.Sheets.DataCharts.ITextDecorationOption.md)
- [ITextStyleOption](../interfaces/GC.Spread.Sheets.DataCharts.ITextStyleOption.md)
- [ITitleStyleOption](../interfaces/GC.Spread.Sheets.DataCharts.ITitleStyleOption.md)
- [IToolTipStyleOption](../interfaces/GC.Spread.Sheets.DataCharts.IToolTipStyleOption.md)
- [IToolTipTextStyleOption](../interfaces/GC.Spread.Sheets.DataCharts.IToolTipTextStyleOption.md)
- [ITreemapHeaderOption](../interfaces/GC.Spread.Sheets.DataCharts.ITreemapHeaderOption.md)
- [ITreemapOption](../interfaces/GC.Spread.Sheets.DataCharts.ITreemapOption.md)
- [IValueEncodingOption](../interfaces/GC.Spread.Sheets.DataCharts.IValueEncodingOption.md)
- [IValueFilter](../interfaces/GC.Spread.Sheets.DataCharts.IValueFilter.md)
- [IValueFilterGroup](../interfaces/GC.Spread.Sheets.DataCharts.IValueFilterGroup.md)
- [IValueOption](../interfaces/GC.Spread.Sheets.DataCharts.IValueOption.md)
- [IValueScaleOption](../interfaces/GC.Spread.Sheets.DataCharts.IValueScaleOption.md)
- [IWaterfallOption](../interfaces/GC.Spread.Sheets.DataCharts.IWaterfallOption.md)

### Type aliases

- [ColorOptions](GC.Spread.Sheets.DataCharts.md#coloroptions)
- [ColorString](GC.Spread.Sheets.DataCharts.md#colorstring)
- [DataValueType](GC.Spread.Sheets.DataCharts.md#datavaluetype)
- [IFilterOption](GC.Spread.Sheets.DataCharts.md#ifilteroption)

## Type aliases

### <a id="coloroptions" name="coloroptions"></a> ColorOptions

Ƭ **ColorOptions**: [`ICssColorOptions`](../interfaces/GC.Spread.Sheets.DataCharts.ICssColorOptions.md)

___

### <a id="colorstring" name="colorstring"></a> ColorString

Ƭ **ColorString**: `string`

___

### <a id="datavaluetype" name="datavaluetype"></a> DataValueType

Ƭ **DataValueType**: `number` \| `boolean` \| `Date` \| `string` \| ``null``

___

### <a id="ifilteroption" name="ifilteroption"></a> IFilterOption

Ƭ **IFilterOption**: [`IValueFilter`](../interfaces/GC.Spread.Sheets.DataCharts.IValueFilter.md) \| [`IValueFilterGroup`](../interfaces/GC.Spread.Sheets.DataCharts.IValueFilterGroup.md)
